Fixing yellow color on rviz

--- a/Parte09/pari_aula9_ex2_a/package.xml
+++ b/Parte09/pari_aula9_ex2_a/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pari_aula9_ex2_A</name>
+  <name>pari_aula9_ex2_a</name>
   <version>0.0.0</version>
-  <description>The pari_aula9_ex2_A package</description>
+  <description>The pari_aula9_ex2_a package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
